--- a/.github/workflows/latest-news-pt.yml
+++ b/.github/workflows/latest-news-pt.yml
@@ -19,6 +19,9 @@ jobs:
     - name: Download Observador Feed
       run: |-
         curl "https://api.observador.pt/wp/lists/latest/" | jq -r tostring > latest--observador.json
+    - name: Download Expresso Feed
+      run: |-
+        curl "https://rss.impresa.pt/feed/latest/expresso.rss?type=ARTICLE,VIDEO,GALLERY,STREAM,PLAYLIST,EVENT&limit=20&pubsubhub=true" | jq -r tostring > latest--expresso.xml
     - name: Commit and push changes
       run: |-
         git diff
