--- a/.github/workflows/newsapi.yml
+++ b/.github/workflows/newsapi.yml
@@ -15,7 +15,7 @@ jobs:
         fetch-depth: 0
     - name: Download News Api
       run: |-
-        curl "https://newsapi.ai/api/v1/article/getArticles?query=%7B%22%24query%22%3A%7B%22%24or%22%3A%5B%7B%22sourceUri%22%3A%22publico.pt%22%7D%2C%7B%22sourceUri%22%3A%22observador.pt%22%7D%2C%7B%22sourceUri%22%3A%22expresso.pt%22%7D%2C%7B%22sourceUri%22%3A%22sicnoticias.pt%22%7D%2C%7B%22sourceUri%22%3A%22rtp.pt%22%7D%2C%7B%22sourceUri%22%3A%22tsf.pt%22%7D%2C%7B%22sourceUri%22%3A%22dn.pt%22%7D%2C%7B%22sourceUri%22%3A%22jn.pt%22%7D%2C%7B%22sourceUri%22%3A%22jornaleconomico.sapo.pt%22%7D%2C%7B%22sourceUri%22%3A%22eco.sapo.pt%22%7D%5D%7D%2C%22%24filter%22%3A%7B%22forceMaxDataTimeWindow%22%3A%2231%22%7D%7D&resultType=articles&articlesSortBy=date&includeArticleBody=false&includeArticleImage=true&apiKey=8c295d3a-83e1-4cf3-992f-2b1061367810" | jq -r tostring > newsapi.json
+        curl "https://newsapi.ai/api/v1/article/getArticles?query=%7B%22%24query%22%3A%7B%22%24or%22%3A%5B%7B%22sourceUri%22%3A%22publico.pt%22%7D%2C%7B%22sourceUri%22%3A%22observador.pt%22%7D%2C%7B%22sourceUri%22%3A%22expresso.pt%22%7D%2C%7B%22sourceUri%22%3A%22sicnoticias.pt%22%7D%2C%7B%22sourceUri%22%3A%22rtp.pt%22%7D%2C%7B%22sourceUri%22%3A%22tsf.pt%22%7D%2C%7B%22sourceUri%22%3A%22dn.pt%22%7D%2C%7B%22sourceUri%22%3A%22jn.pt%22%7D%2C%7B%22sourceUri%22%3A%22jornaleconomico.sapo.pt%22%7D%2C%7B%22sourceUri%22%3A%22eco.sapo.pt%22%7D%2C%7B%22sourceUri%22%3A%22cnnportugal.iol.pt%22%7D%5D%7D%2C%22%24filter%22%3A%7B%22forceMaxDataTimeWindow%22%3A%2231%22%7D%7D&resultType=articles&articlesSortBy=date&includeArticleBody=false&includeArticleImage=true&apiKey=8c295d3a-83e1-4cf3-992f-2b1061367810" | jq -r tostring > newsapi.json
     - name: Commit and push changes
       run: |-
         git diff
