--- a/.github/workflows/newsapi.yml
+++ b/.github/workflows/newsapi.yml
@@ -1,8 +1,8 @@
 name: Fetch News API
 on:
   workflow_dispatch:
-  schedule:
-    - cron:  '*/10 7-23 * * *'
+  #schedule:
+  #  - cron:  '*/10 7-23 * * *'
 
 jobs:
   build:
