--- a/.github/workflows/latest-news-pt.yml
+++ b/.github/workflows/latest-news-pt.yml
@@ -19,11 +19,17 @@ jobs:
     - name: Download Observador Feed
       run: |-
         curl "https://api.observador.pt/wp/lists/latest/" | jq -r tostring > latest--observador.json
-    - name: Find and Replace latest--observador.json
+    - name: Find and Replace title
       uses: jacobtomlinson/gha-find-replace@v3
       with:
         find: "title"
         replace: "titulo"
+        include: "**latest--observador.json"
+    - name: Find and Replace pubDate
+      uses: jacobtomlinson/gha-find-replace@v3
+      with:
+        find: "pubDate"
+        replace: "data"
         include: "**latest--observador.json"
     - name: Download Expresso Feed
       run: |-
