--- a/.github/workflows/latest-news-pt.yml
+++ b/.github/workflows/latest-news-pt.yml
@@ -81,7 +81,19 @@ jobs:
       with:
         find: '"guid":'
         replace: '"brandImg":"https://static.publico.pt/news/expresso.png","guid":"'
-        include: "**latest--publico.json"
+        include: "**latest--expresso.json"
+    - name: Find and Replace Expresso init json
+      uses: jacobtomlinson/gha-find-replace@v3
+      with:
+        find: '{"version":"https://jsonfeed.org/version/1","titulo":"Expresso","home_page_url":"https://expresso.pt/","description":"No Expresso leia opinião, economia, política, cultura, lifestyle, cinema, desporto, última hora. Veja fotografias e vídeos.","items":[{'
+        replace: '[{'
+        include: "**latest--expresso.json"
+    - name: Find and Replace Expresso end json
+      uses: jacobtomlinson/gha-find-replace@v3
+      with:
+        find: '}}]}'
+        replace: '}}]'
+        include: "**latest--expresso.json"
     #- name: Download Expresso Feed
     #  run: |-
     #    curl -o latest--expresso.xml  https://rss.impresa.pt/feed/latest/expresso.rss?type=ARTICLE,VIDEO,GALLERY,STREAM,PLAYLIST,EVENT&limit=20&pubsubhub=true
