--- a/.github/workflows/latest-news-pt.yml
+++ b/.github/workflows/latest-news-pt.yml
@@ -82,17 +82,17 @@ jobs:
         find: '"guid":'
         replace: '"brandImg":"https://static.publico.pt/news/expresso.png","guid":"'
         include: "**latest--expresso.json"
-    - name: Find and Replace Expresso init json
-      uses: jacobtomlinson/gha-find-replace@v3
-      with:
-        find: '{"version":"https://jsonfeed.org/version/1","titulo":"Expresso","home_page_url":"https://expresso.pt/","description":"No Expresso leia opinião, economia, política, cultura, lifestyle, cinema, desporto, última hora. Veja fotografias e vídeos.","items":'
-        replace: ''
-        include: "**latest--expresso.json"
     - name: Find and Replace Expresso end json
       uses: jacobtomlinson/gha-find-replace@v3
       with:
         find: '}}]}'
         replace: '}}]'
+        include: "**latest--expresso.json"
+    - name: Find and Replace Expresso init json
+      uses: jacobtomlinson/gha-find-replace@v3
+      with:
+        find: '{"version":"https://jsonfeed.org/version/1","titulo":"Expresso","home_page_url":"https://expresso.pt/","description":"No Expresso leia opinião, economia, política, cultura, lifestyle, cinema, desporto, última hora. Veja fotografias e vídeos.","items":['
+        replace: '['
         include: "**latest--expresso.json"
     #- name: Download Expresso Feed
     #  run: |-
