--- a/.github/workflows/latest-news-pt.yml
+++ b/.github/workflows/latest-news-pt.yml
@@ -15,10 +15,10 @@ jobs:
         fetch-depth: 0
     - name: Download Público Feed
       run: |-
-        curl "https://www.publico.pt/api/search/?size=20" | jq -r tostring > latest--publico.json
+        curl "https://www.publico.pt/api/search/?size=20?$(date +%s)" | jq -r tostring > latest--publico.json
     - name: Download Observador Feed
       run: |-
-        curl "https://api.observador.pt/wp/lists/latest/" | jq -r tostring > latest--observador.json
+        curl "https://api.observador.pt/wp/lists/latest/?$(date +%s)" | jq -r tostring > latest--observador.json
     - name: Download Expresso Feed
       run: |-
         curl "https://www.toptal.com/developers/feed2json/convert?url=https%3A%2F%2Frss.impresa.pt%2Ffeed%2Flatest%2Fexpresso.rss%3Ftype%3DARTICLE%2CVIDEO%2CGALLERY%2CSTREAM%2CPLAYLIST%2CEVENT%26limit%3D20%26pubsubhub%3Dtrue&minify=on" | jq -r tostring > latest--expresso.json
