--- a/.github/workflows/latest-news-pt.yml
+++ b/.github/workflows/latest-news-pt.yml
@@ -21,7 +21,7 @@ jobs:
         curl "https://api.observador.pt/wp/lists/latest/?$(date +%s)" | jq -r tostring > latest--observador.json
     - name: Download Expresso Feed
       run: |-
-        curl -H 'Cache-Control: no-cache, no-store' "https://www.toptal.com/developers/feed2json/convert?url=https%3A%2F%2Frss.impresa.pt%2Ffeed%2Flatest%2Fexpresso.rss%3Ftype%3DARTICLE%2CVIDEO%2CGALLERY%2CSTREAM%2CPLAYLIST%2CEVENT%26limit%3D20%26pubsubhub%3Dtrue&minify=on" | jq -r tostring > latest--expresso.json
+        curl -H 'Cache-Control: no-cache, no-store' "https://www.toptal.com/developers/feed2json/convert?url=https%3A%2F%2Frss.impresa.pt%2Ffeed%2Flatest%2Fexpresso.rss%3F$(date +%s)%26type%3DARTICLE%2CVIDEO%2CGALLERY%2CSTREAM%2CPLAYLIST%2CEVENT%26limit%3D20%26pubsubhub%3Dtrue&minify=on" | jq -r tostring > latest--expresso.json
     - name: Find and Replace title
       uses: jacobtomlinson/gha-find-replace@v3
       with:
