--- a/.github/workflows/latest-news-pt.yml
+++ b/.github/workflows/latest-news-pt.yml
@@ -21,7 +21,7 @@ jobs:
         curl "https://api.observador.pt/wp/lists/latest/?$(date +%s)" | jq -r tostring > latest--observador.json
     - name: Download Expresso Feed
       run: |-
-        curl "https://www.toptal.com/developers/feed2json/convert?url=https%3A%2F%2Frss.impresa.pt%2Ffeed%2Flatest%2Fexpresso.rss%3F$(date +%s)%26type%3DARTICLE%2CVIDEO%2CGALLERY%2CSTREAM%2CPLAYLIST%2CEVENT%26limit%3D20%26pubsubhub%3Dtrue&minify=on" | jq -r tostring > latest--expresso.json
+        curl "https://www.toptal.com/developers/feed2json/convert?url=https%3A%2F%2Frss.impresa.pt%2Ffeed%2Flatest%2Fexpresso.rss%3F$(date +%s)%26type%3DARTICLE%2CVIDEO%2CGALLERY%2CSTREAM%2CPLAYLIST%2CEVENT%26limit%3D20%26pubsubhub%3Dtrue&minify=on" | map({title, url, date_published, brandImg:"https://static.publico.pt/news/expresso.png"})' | jq -r tostring > latest--expresso.json
     - name: Download RTP Feed
       run: |-
         curl "https://www.toptal.com/developers/feed2json/convert?url=https%3A%2F%2Fwww.rtp.pt%2Fnoticias%2Frss?v=$(date +%s)&minify=on" | jq '.items[:20] | map({title, url, date_published, brandImg:"https://static.publico.pt/news/rtp.png"})' | jq -r tostring > latest--rtp.json
@@ -67,25 +67,6 @@ jobs:
         find: ',"title":"'
         replace: ',"brandImg":"https://static.publico.pt/news/publico.png","title":"'
         include: "**latest--publico.json"
-    - name: Find and Replace image Expresso
-      uses: jacobtomlinson/gha-find-replace@v3
-      with:
-        find: '"guid":'
-        replace: '"brandImg":"https://static.publico.pt/news/expresso.png","guid":'
-        include: "**latest--expresso.json"
-    - name: Find and Replace Expresso end json
-      uses: jacobtomlinson/gha-find-replace@v3
-      with:
-        find: '}}]}'
-        replace: '}}]'
-        include: "**latest--expresso.json"
-    - name: Find and Replace Expresso init json
-      uses: jacobtomlinson/gha-find-replace@v3
-      with:
-        find: '{"version":"https://jsonfeed.org/version/1","title":"Expresso","home_page_url":"https://expresso.pt/","description":"No Expresso leia opinião, economia, política, cultura, lifestyle, cinema, desporto, última hora. Veja fotografias e vídeos.","items":['
-        replace: '['
-        include: "**latest--expresso.json"
-        regex: false
     - name: Commit and push changes
       run: |-
         git diff
