--- a/.github/workflows/latest-news-pt.yml
+++ b/.github/workflows/latest-news-pt.yml
@@ -55,18 +55,15 @@ jobs:
         find: '},"type":'
         replace: ',"type":'
         include: "**latest--observador.json"
-    - name: Find and Replace image OBS
-      uses: jacobtomlinson/gha-find-replace@v3
-      with:
-        find: ',"title":"'
-        replace: ',"brandImg":"https://static.publico.pt/news/observador.png","title":"'
-        include: "**latest--observador.json"
     - name: Find and Replace image Publico
       uses: jacobtomlinson/gha-find-replace@v3
       with:
         find: ',"title":"'
         replace: ',"brandImg":"https://static.publico.pt/news/publico.png","title":"'
         include: "**latest--publico.json"
+    - name: Edit OBS Feed
+      run: |-
+        curl "https://raw.githubusercontent.com/alexmsantos/data/main/latest--observador.json?$(date +%s)" | jq '.items[:20] | map({title, url, date_published, brandImg:"https://static.publico.pt/news/observador.png"})' | jq -r tostring > latest--observador.json
     - name: Commit and push changes
       run: |-
         git diff
