--- a/.github/workflows/latest-news-pt.yml
+++ b/.github/workflows/latest-news-pt.yml
@@ -65,7 +65,7 @@ jobs:
       uses: jacobtomlinson/gha-find-replace@v3
       with:
         find: ',"title":"'
-        replace: ',"brandImg":"https://static.publico.pt/news/publico.png","title":"'
+        replace: ',"brandImg":"https://static.publico.pt/news/observador.png","title":"'
         include: "**latest--observador.json"
     - name: Commit and push changes
       run: |-
