--- a/.github/workflows/latest-news-pt.yml
+++ b/.github/workflows/latest-news-pt.yml
@@ -46,8 +46,8 @@ jobs:
     - name: Find and Replace links close tag
       uses: jacobtomlinson/gha-find-replace@v3
       with:
-        find: '},"type":'
-        replace: ',"type":'
+        find: '},"date_published":'
+        replace: ',"date_published":'
         include: "**latest--observador.json"
     - name: Find and Replace image Publico
       uses: jacobtomlinson/gha-find-replace@v3
@@ -55,12 +55,6 @@ jobs:
         find: ',"title":"'
         replace: ',"brandImg":"https://static.publico.pt/news/publico.png","title":"'
         include: "**latest--publico.json"
-    - name: Find and Replace image Observador
-      uses: jacobtomlinson/gha-find-replace@v3
-      with:
-        find: ',"title":"'
-        replace: ',"brandImg":"https://static.publico.pt/news/observador.png","title":"'
-        include: "**latest--observador.json"
     - name: Commit and push changes
       run: |-
         git diff
