--- a/.github/workflows/latest-news-pt.yml
+++ b/.github/workflows/latest-news-pt.yml
@@ -25,6 +25,9 @@ jobs:
     - name: Download RTP Feed
       run: |-
         curl "https://www.toptal.com/developers/feed2json/convert?url=https%3A%2F%2Fwww.rtp.pt%2Fnoticias%2Frss?v=$(date +%s)&minify=on" | jq '.items[:20] | map({title, url, date_published, brandImg:"https://static.publico.pt/news/rtp.png"})' | jq -r tostring > latest--rtp.json
+    - name: Download RTP Feed
+      run: |-
+        curl "https://www.toptal.com/developers/feed2json/convert?url=https%3A%2F%2Fjornaleconomico.sapo.pt%2Ffeed?v=$(date +%s)&minify=on" | jq '.items[:10] | map({title, url, date_published, brandImg:"https://static.publico.pt/news/economico.png"})' | jq -r tostring > digest/latest--economico.json
     - name: Find and Replace Links
       uses: jacobtomlinson/gha-find-replace@v3
       with:
