--- a/.github/workflows/latest-news-pt.yml
+++ b/.github/workflows/latest-news-pt.yml
@@ -36,7 +36,7 @@ jobs:
         curl "https://www.toptal.com/developers/feed2json/convert?url=https%3A%2F%2Fwww.noticiasaominuto.com%2Frss%2Fultima-hora?v=$(date +%s)&minify=on" | jq '.items[:20] | map({title, url, date_published, brandImg:"https://static.publico.pt/news/noticiasaominuto.png"})' | jq -r tostring > digest/latest--noticiasaominuto.json
     - name: Download CNN Portugal Feed
       run: |-
-        curl "https://www.toptal.com/developers/feed2json/convert?url=https%3A%2F%2Fcnnportugal.iol.pt%2Frss.xml?v=$(date +%s)&minify=on" | jq '.items[:20] | map({title, url, date_published, brandImg:"https://static.publico.pt/news/cnn-portugal.png"})' | jq -r tostring > digest/latest--cnnportugal.json
+        curl "https://www.toptal.com/developers/feed2json/convert?url=https%3A%2F%2Fcnnportugal.iol.pt%2Frss.xml&minify=on&v=$(date +%s)" | jq '.items[:20] | map({title, url, date_published, brandImg:"https://static.publico.pt/news/cnn-portugal.png"})' | jq -r tostring > digest/latest--cnnportugal.json
     - name: Find and Replace Links
       uses: jacobtomlinson/gha-find-replace@v3
       with:
