--- a/.github/workflows/latest-news-pt.yml
+++ b/.github/workflows/latest-news-pt.yml
@@ -31,7 +31,7 @@ jobs:
     - name: Download RTP Feed
       run: |-
         curl "https://www.toptal.com/developers/feed2json/convert?url=https%3A%2F%2Fwww.rtp.pt%2Fnoticias%2Frss?v=$(date +%s)&minify=on" | jq '.items[:20] | map({title, url, date_published, brandImg:"/assets/img/rtp.png"})' | jq -r tostring > digest/latest--rtp.json
-    - name: Download Jonnal Económico Feed
+    - name: Download Jornal Económico Feed
       run: |-
         curl "https://www.toptal.com/developers/feed2json/convert?url=https%3A%2F%2Fjornaleconomico.sapo.pt%2Ffeed?v=$(date +%s)&minify=on" | jq '.items[:10] | map({title, url, date_published, brandImg:"/assets/img/economico.png"})' | jq -r tostring > digest/latest--economico.json
     - name: Download Notícias ao Minuto Feed
