--- a/.github/workflows/latest-news-pt.yml
+++ b/.github/workflows/latest-news-pt.yml
@@ -40,6 +40,9 @@ jobs:
     - name: Download Dinheiro Vivo Feed
       run: |-
         curl "https://www.toptal.com/developers/feed2json/convert?url=http%3A%2F%2Ffeeds.dinheirovivo.pt%2FDV-Ultimas?v=$(date +%s)&minify=on" | jq '.items[:20] | map({title, url, date_published, brandImg:"/assets/img/dv.png"})' | jq -r tostring > digest/latest--dinheirovivo.json
+    - name: Download Jornal de Negócios Feed
+      run: |-
+        curl "https://www.toptal.com/developers/feed2json/convert?url=https://www.jornaldenegocios.pt/rss?v=$(date +%s)" | jq '.items[:20] | map({title, url, date_published, brandImg:"/assets/img/negocios.png"})' | jq -r tostring > digest/latest--negocios.json
     - name: Download Rádio Renascença Feed
       run: |-
         curl "https://www.toptal.com/developers/feed2json/convert?url=https://rr.sapo.pt/rss/rssfeed.aspx?v=2331&section=section_noticias" | jq '.items[:20] | map({title, url, date_published, brandImg:"/assets/img/rr.png"})' | jq -r tostring > digest/latest--rr.json
