--- a/.github/workflows/latest-news-pt.yml
+++ b/.github/workflows/latest-news-pt.yml
@@ -15,7 +15,7 @@ jobs:
         fetch-depth: 0
     - name: Download Público Feed
       run: |-
-        curl "https://www.publico.pt/api/search/?size=20?$(date +%s)" | jq '.[:20] | map(.title = .titulo | .date_published = .data | del(.titulo, .data)) | map({title, url, date_published, brandImg: "/assets/img/publico.png"})' | jq -r tostring > digest/latest--publico.json
+        curl "https://www.publico.pt/api/search/?size=20?$(date +%s)" | jq '.[:20] | map(.title = .titulo | .date_published = .data | del(.titulo, .data)) | map({title, url, date_published, brandName: "Público", brandImg: "/assets/img/publico.png"})' | jq -r tostring > digest/latest--publico.json
     - name: Download Observador Feed
       run: |-
         curl "https://api.observador.pt/wp/lists/latest/?$(date +%s)" | jq '.[:20] | map(.date_published = .pubDate | del(.pubDate)) | map({title, links, date_published, brandImg: "/assets/img/observador.png"})' | jq -r tostring > digest/latest--observador.json
@@ -49,9 +49,9 @@ jobs:
     - name: Download Notícias ao Minuto Feed
       run: |-
         curl "https://www.toptal.com/developers/feed2json/convert?url=https%3A%2F%2Fwww.noticiasaominuto.com%2Frss%2Fultima-hora?v=$(date +%s)&minify=on" | jq '.items[:20] | map({title, url, date_published, brandImg:"/assets/img/noticiasaominuto.png"})' | jq -r tostring > digest/latest--noticiasaominuto.json
-    - name: Download Observador Feed
-      run: |-
-        curl "https://eco.sapo.pt/wp-json/eco/v1/items" | jq '.[:20] | map(.date_published = .pubDate | del(.pubDate)) | map({title, links, date_published, brandImg: "/assets/img/eco.png"})' | jq -r tostring > digest/latest--eco.json
+    #- name: Download Eco Feed
+    #  run: |-
+    #    curl "https://eco.sapo.pt/wp-json/eco/v1/items" | jq '.[:20] | map(.date_published = .pubDate | del(.pubDate)) | map({title, links, date_published, brandImg: "/assets/img/eco.png"})' | jq -r tostring > digest/latest--eco.json
     #- name: Download CNN Portugal Feed
     #  run: |-
     #    curl "https://www.toptal.com/developers/feed2json/convert?url=https%3A%2F%2Fcnnportugal.iol.pt%2Frss.xml%3Fv%3D$(date +%s)&minify=on" | jq '.items[:20] | map({title, url, date_published, brandImg:"/assets/img/cnn-portugal.png"})' | jq -r tostring > digest/latest--cnnportugal.json
